# sketchpolicy

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
bench_results/: v0.1.0a1.json  v0.1.0a2.json  v0.1.0a3.json
scripts/: measure.py  verify_step.py
src/sketchpolicy/: __init__.py  cli.py  contract.py  doctor.py  eeplan.py
src/sketchpolicy/augment/: __init__.py  feasibility.py  pipeline.py  sampling.py  transforms.py
src/sketchpolicy/emit/: __init__.py  reader.py  schema.py  writer.py
src/sketchpolicy/ingest/: __init__.py  mediapipe_hands.py  mock.py  types.py
src/sketchpolicy/profiles/: __init__.py
src/sketchpolicy/replay/: __init__.py  pybullet_replay.py
src/sketchpolicy/retarget/: __init__.py  gripper.py  pipeline.py  pose.py  smoothing.py
tests/: conftest.py  test_augment_feasibility.py  test_augment_pipeline.py  test_augment_transforms.py  test_cli.py  test_contract.py  test_doctor.py  test_eeplan.py  test_emit_roundtrip.py  test_ingest_mock.py  test_ingest_video.py  test_lerobot_compat.py  test_readme.py  test_replay.py  test_retarget.py
